apps/diego/base/diego-deploy.yaml
---
# create deployment for diego
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: diego-deploy
  namespace: diego
  labels:
    app: diego
    version: 0.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diego
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: diego
        version: 0.0.1
    spec:
      containers:
      - name: diegoluisi
        image: diegoluisi/diego:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: "64Mi"
          limits:
            cpu: 100m
            memory: "128Mi"
        ports:
        - containerPort: 8080
          name: diego
          readinessProbe:
            httpGet:
              port: 8080
              path: /health-check/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /health-check/liveness
