apps/diego/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: diego-stable
  namespace: diego
  annotations:
    external-dns.alpha.kubernetes.io/hostname: diego.diegoluisi.eti.br
  labels:
    app: diego
    backstage.io/kubernetes-id: diego
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: diego

---
apiVersion: v1
kind: Service
metadata:
  name: diego-canary
  namespace: diego
  annotations:
    external-dns.alpha.kubernetes.io/hostname: diego.diegoluisi.eti.br
  labels:
    app: diego
    backstage.io/kubernetes-id: diego
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: diego
