apps/diego/base/diego-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: diego-vs
  namespace: diego
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - diego.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: diego-svc
      weight: 100
    # - destination:
    #     host: diego-canary
    #   weight: 0
