apps/diego/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: diego-vsvc
  namespace: diego
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - diego.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: diego-stable
      weight: 100
    - destination:
        host: diego-canary
      weight: 0
